--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Artur Paes",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
@@ -30,5 +31,8 @@
     "lint-staged": "^10.2.9",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "axios": "^0.20.0"
   }
 }
