--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
     "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "test:cypress": "cypress open",
     "check": "npm-check -u -s",
     "eslint": "eslint 'src/**' --fix"
   },
@@ -17,6 +18,7 @@
   "author": "Artur Paes",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.4.5",
     "@testing-library/react": "^11.0.2",
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.12",
@@ -29,8 +31,10 @@
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "css-loader": "^4.2.2",
+    "cypress": "^5.1.0",
     "eslint": "^7.8.1",
     "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
