--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,10 @@
     "react/jsx-uses-vars": "error",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/indent": "off",
+    "@typescript-eslint/no-namespace": "off",
     "space-before-function-paren": "off",
+    "no-redeclare": "off",
+    "import/export": "off",
     "@typescript-eslint/space-before-function-paren": "off"
   }
 }
